--- a/dayforce/template/feedback.html
+++ b/dayforce/template/feedback.html
@@ -20,9 +20,9 @@ alert("Sorry,Try again")
     <title>Suggestions | DayFORCE</title>
     <link rel="stylesheet" href="../static/css/register.css">
 </head>
-<form method="POST" class="container" style="width: 60%; padding: 40px; top: 50%; left: 50%;right: 50%; padding-top:30px; margin-left:230px">
+<form method="POST"  class="container center" style="width: 33%; padding: 40px; top: 50%; left: 50%;">
 {% csrf_token %}
-<body background="https://renyuanwong.com/static/digi_Tris.gif" style="background-size: cover; background-repeat: no-repeat;">
+<body background="https://renyuanwong.com/static/digi_Tris.gif">
 
     <h1 class="main_head">Suggestions Form</h1>
 <hr>
