--- a/dayforce/template/home.html
+++ b/dayforce/template/home.html
@@ -71,24 +71,18 @@ setInterval(function() {
 <div style="background: rgb(218, 199, 199);">
 <marquee  behavior="" direction=""><div style="font-size: large;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque ratione, ad ex tempore quis veniam atque mollitia! Voluptas molestiae quos eveniet beatae architecto incidunt hic, corrupti maiores, aspernatur, nemo rem.</div></marquee>
 </div>
-<section>
 <div id="slideshow" style="text-align: center;">
-	<div style="display: inline;">
+	<div >
 	  <img src="https://www.neighbium.com/wp-content/uploads/2017/09/announcement.png">
 	</div>
-	<div style="display: inline;">
+	<div>
 	  <img src="https://blogimage.vantagecircle.com/vcblogimages/2021/07/employee-of-the-month-award-1.png">
 	</div>
 	
   </div>
-</section>
-<br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<section>
-	<img src="../static/images/Screenshot 2021-08-29 020758.png" alt="" srcset="" style="width: 100%;">
-</section>  
+  
 <!-- About Section -->
-<div s>
+<div class="w3-row w3-padding-64" id="about">
    <p>hello</p>
   </div>
     
